# InvoiceApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  export_presets.cfg  icon.svg.import  main.cpp  project.godot  todo.txt
Source/: Main.cpp
Source/Ui/: InvoiceApp.ui
assets/: add_circle.svg.import  error.svg.import  icon.png.import  icon.svg.import  info.svg.import  success.svg.import  warning.svg.import
assets/icons/: add_circle.svg.import  add_circle_hovered.svg.import  delete.svg.import  delete_hovered.svg.import  edit.svg.import  edit_hovered.svg.import  error.svg.import  info.svg.import  search.svg.import  success.svg.import  warning.svg.import
assets/logo/: icon.svg.import
assets/logos/: icon.svg.import
assets/raw/: icon.svg.import
content/: envelope.png.import  icon.svg.import
data/: customer.gd  invoice.gd  invoice_row.gd
fonts/roboto/: Roboto-Black.ttf.import  Roboto-BlackItalic.ttf.import  Roboto-Bold.ttf.import  Roboto-BoldItalic.ttf.import  Roboto-ExtraBold.ttf.import  Roboto-ExtraBoldItalic.ttf.import  Roboto-ExtraLight.ttf.import  Roboto-ExtraLightItalic.ttf.import  Roboto-Italic.ttf.import  Roboto-Light.ttf.import  (+8 more)
globals/: logger.gd  persistant_data.gd  persistent_data.gd
scenes/: file_dialog.tscn  main.tscn  table_entry.tscn  table_row.tscn  text_edit_no_tab.tscn  window.tscn
scripts/: invoice_manager.gd  menu.gd  table.gd  table_row.gd  text_edit_no_tab.gd  texture_button.gd  window.gd
source/: invoice_table.cpp  invoice_table.hpp  main.cpp  main_window.cpp  main_window.hpp
styles/: main.tres  table_theme.tres
(+60 files in other folders)
